[package]
name = "rbcue2txt"
description = "Converts rekordbox cue files to text"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/andreapavoni/rbcue2txt"
license = "MIT"
keywords = ["rekordbox", "cue-file"]
rust-version = "1.67"
edition = "2021"
publish = false

[dependencies]
regex = "1.8.3"
